--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<span>coopdecaldas</span>
 				</div>
 			</div>
-a_nav">
+<"nav">
 					<ul class="main_nav_list">
 						<li class="main_nav_item"><a href="index.html">inicio</a></li>
 						<li class="main_nav_item"><a href="empresa.html">Empresa</a></li>
