--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 					<span>coopdecaldas</span>
 				</div>
 			</div>
-<"nav">
+
+			<!-- Main Navigation -->
+			<nav class="main_nav_container">
+				<div class="main_nav">
 					<ul class="main_nav_list">
 						<li class="main_nav_item"><a href="index.html">inicio</a></li>
 						<li class="main_nav_item"><a href="empresa.html">Empresa</a></li>
@@ -362,7 +365,7 @@
 
 					<div class="register_section d-flex flex-column align-items-center justify-content-center">
 						<div class="register_content text-center">
-							<h1 class="register_title">AL ASOCIARTE A COOPDECALDAS</h1>
+							<h1 class="register_title">AL ASOCIARTE A COOPDECALDA</h1>
 							<h2 class="register_text">Disfruta de grandes y excelentes beneficios como: <br><br>
 
 								<li style="color:white;">Crédito con interés bajos </li>
